--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "@puyodead1/fosscord-api",
-  "version": "0.0.1",
-  "main": "dist/index.js",
-  "module": "esm/index.js",
-  "author": "Puyodead1",
-  "license": "MIT",
-  "dependencies": {
-    "@insertish/oapi": "^0.1.18",
-    "axios": "^1.3.4",
-    "lodash.defaultsdeep": "^4.6.1",
-    "patch-package": "^6.5.1"
-  },
-  "devDependencies": {
-    "@types/lodash.defaultsdeep": "^4.6.7",
-    "openapi-typescript": "^6.2.0",
-    "typescript": "^5.0.2"
-  },
-  "scripts": {
-    "postinstall": "patch-package",
-    "prepublish": "yarn build",
-    "build": "oapilib && tsc && tsc -p tsconfig.esm.json"
-  }
+    "name": "@puyodead1/spacebar-api",
+    "version": "0.0.1",
+    "main": "dist/index.js",
+    "module": "esm/index.js",
+    "author": "Puyodead1",
+    "license": "MIT",
+    "dependencies": {
+        "@insertish/oapi": "^0.1.18",
+        "axios": "^1.3.4",
+        "lodash.defaultsdeep": "^4.6.1",
+        "patch-package": "^6.5.1"
+    },
+    "devDependencies": {
+        "@types/lodash.defaultsdeep": "^4.6.7",
+        "openapi-typescript": "^6.2.0",
+        "typescript": "^5.0.2"
+    },
+    "scripts": {
+        "postinstall": "patch-package",
+        "prepublish": "yarn build",
+        "build": "oapilib && tsc && tsc -p tsconfig.esm.json"
+    }
 }
