--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "revolt-api",
-  "version": "0.5.17",
-  "description": "Revolt API Library",
-  "main": "dist/index.js",
-  "module": "esm/index.js",
-  "homepage": "https://developers.revolt.chat",
-  "repository": "https://github.com/revoltchat/api.git",
-  "author": "Paul Makles <insrt.uk>",
-  "license": "MIT",
-  "scripts": {
-    "build": "REWRITE_ANYOF=1 oapilib && tsc && tsc -p tsconfig.esm.json",
-    "prepublish": "in-publish && yarn build || echo Skipping build."
-  },
-  "devDependencies": {
-    "@types/lodash.defaultsdeep": "^4.6.6",
-    "in-publish": "^2.0.1",
-    "openapi-typescript": "^5.2.0",
-    "typescript": "^4.6.2"
-  },
-  "dependencies": {
-    "@insertish/oapi": "0.1.18",
-    "axios": "^0.26.1",
-    "lodash.defaultsdeep": "^4.6.1"
-  },
-  "files": [
-    "src",
-    "dist",
-    "esm",
-    "OpenAPI.json",
-    "LICENSE",
-    "README.md"
-  ]
+    "name": "@spacebarchat/spacebar-types",
+    "version": "0.1.0",
+    "description": "Spacebar API Library",
+    "main": "dist/index.js",
+    "module": "esm/index.js",
+    "homepage": "https://spacebar.chat",
+    "repository": "https://github.com/spacebarchat/spacebar-types.git",
+    "author": "Paul Makles <insrt.uk>",
+    "license": "MIT",
+    "scripts": {
+        "build": "oapilib && tsc && tsc -p tsconfig.esm.json",
+        "prepublish": "in-publish && pnpm build || echo Skipping build."
+    },
+    "devDependencies": {
+        "@types/lodash.defaultsdeep": "^4.6.6",
+        "in-publish": "^2.0.1",
+        "openapi-typescript": "^5.2.0",
+        "typescript": "^4.6.2"
+    },
+    "dependencies": {
+        "@spacebarchat/oapi": "0.1.21",
+        "axios": "^0.26.1",
+        "lodash.defaultsdeep": "^4.6.1"
+    },
+    "files": [
+        "src",
+        "dist",
+        "esm",
+        "OpenAPI.json",
+        "LICENSE",
+        "README.md"
+    ]
 }
